--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "node": ">=23.0.0"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.10"
+    "@nestjs/common": "^11.0.10",
+    "@nestjs/core": "^11.0.10"
   },
   "devDependencies": {
     "prettier": "^3.5.1"
