--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "engines": {
     "node": ">=23.0.0"
   },
+  "type": "module",
   "dependencies": {
     "@nestjs/common": "^11.0.10",
     "@nestjs/core": "^11.0.10"
