--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "type": "module",
   "dependencies": {
     "@nestjs/common": "^11.0.10",
-    "@nestjs/core": "^11.0.10"
+    "@nestjs/core": "^11.0.10",
+    "@nestjs/platform-express": "^11.0.10"
   },
   "devDependencies": {
     "@nestjs/testing": "^11.0.10",
