--- a/.github/workflows/check-repository-labels.yaml
+++ b/.github/workflows/check-repository-labels.yaml
@@ -13,16 +13,22 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-			const requiredLabels = ['major', 'minor', 'patch']
-
-			const { data: labels } = await github.rest.issues.listLabelsForRepo({
-				owner: context.repo.owner,
-				repo: context.repo.repo,
+            const requiredLabels = [ 'major', 'minor', 'patch' ]
+            
+            const { data: labels } = await github.rest.issues.listLabelsForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo
             })
             
             const existingLabels = labels.map(label => label.name)
             const missingLabels = requiredLabels.filter(label => !existingLabels.includes(label))
-
-			if (missingLabels.length > 0) {
-				core.setFailed(`Missing required labels: ${missingLabels.join(', ')}')
+            
+            if (missingLabels.length > 0) {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: `Missing required labels: ${missingLabels.join(', ')}`
+              })
+              console.log(`::warning::Missing required labels: ${missingLabels.join(', ')}`)
             }
