fix: labeling workflow to get write permission #20

--- a/.github/workflows/check-repository-labels.yaml
+++ b/.github/workflows/check-repository-labels.yaml
@@ -1,5 +1,7 @@
 name: Check Repository Labels
 run-name: "#${{ github.event.issue.number }}"
+permissions:
+  issues: write
 on:
   issues:
     types: [ opened, labeled, unlabeled ]
