--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^11.0.10",
+    "@types/node": "^22.13.4",
     "prettier": "^3.5.1"
   }
 }
