--- a/.github/workflows/check-repository-labels.yaml
+++ b/.github/workflows/check-repository-labels.yaml
@@ -4,7 +4,7 @@ permissions:
   issues: write
 on:
   issues:
-    types: [ opened, labeled, unlabeled ]
+    types: [ opened ]
   workflow_dispatch:
 jobs:
   check-labels:
