--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@swc/core": "^1.10.17",
     "@types/node": "^22.13.4",
     "prettier": "^3.5.1",
-    "@nestjs/cli": "^11.0.0"
+    "@nestjs/cli": "^11.0.0",
+    "@types/supertest": "^6.0.2",
+    "supertest": "^7.0.0"
   }
 }
