--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^3.5.1",
     "@nestjs/cli": "^11.0.0",
     "@types/supertest": "^6.0.2",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "vitest": "^3.0.6"
   }
 }
