--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nestjs/cli": "^11.0.0",
     "@types/supertest": "^6.0.2",
     "supertest": "^7.0.0",
+    "unplugin-swc": "^1.5.1",
     "vitest": "^3.0.6"
   }
 }
