--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^11.0.10",
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.10.17",
     "@types/node": "^22.13.4",
     "prettier": "^3.5.1"
   }
