--- a/.github/workflows/configure-repository-labels.yaml
+++ b/.github/workflows/configure-repository-labels.yaml
@@ -16,9 +16,10 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const command = context.payload.comment.body.trim()
-            return { isConfigureCommand: command.startsWith('/configure-default-labels' ? 'true' : 'false')
-      - name: Write Acknowledgement Comment
-        if: steps.filter.outpus.isConfigureCommand == 'true'
+            return { isConfigureCommand: command.startsWith('/configure-default-labels') ? 'true' : 'false' }
+      - name: Acknowledge command comment
+        if: steps.filter.outputs.isConfigureCommand == 'true'
+        id: initial_ack
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -28,6 +29,7 @@ jobs:
               repo: context.repo.repo,
               issue_number: context.issue.number,
               body: `> [!NOTE]
-            > Command \'/configure-default-labels\' acknowledged.`
+            > Command \'/configure-default-labels\' acknowledged. Adding the labels.`
             })
             console.log('Command acknowledged')
+            return { comment_id: ackComment.data.id }
