infra(CI): Update Configure Repository Labels workflow to use run-names that reflect the workflow name #37

--- a/.github/workflows/configure-repository-labels.yaml
+++ b/.github/workflows/configure-repository-labels.yaml
@@ -1,5 +1,5 @@
 name: Configure Repository Labels
-run-name: "#${{ github.event.issue.number }}"
+run-name: "Label configuration triggered by issue: #${{ github.event.issue.number }}"
 permissions:
   issues: write
 on:
