infra(CI): Fix syntax error in debug logging in filter step #45

--- a/.github/workflows/configure-repository-labels.yaml
+++ b/.github/workflows/configure-repository-labels.yaml
@@ -16,7 +16,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const command = context.payload.comment.body.trim()
-            console.debug("Command": command)
+            console.debug("Command:", command)
             return { isConfigureCommand: command.startsWith('/configure-default-labels') ? 'true' : 'false' }
       - name: Acknowledge command comment
         if: steps.filter.outputs.isConfigureCommand == 'true'
