--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "start": "npx nest start",
+    "test": "vitest --config infra/vite.config.ts",
     "test:e2e": "vitest --config test/vite.config.ts"
   },
   "config": {},
