--- a/.github/workflows/configure-repository-labels.yaml
+++ b/.github/workflows/configure-repository-labels.yaml
@@ -17,7 +17,7 @@ jobs:
           script: |
             const command = context.payload.comment.body.trim()
             console.debug("Command:", command)
-            return { isConfigureCommand: command.startsWith('/configure-default-labels') ? 'true' : 'false' }
+            core.setOutput('isConfigureCommand', command.startsWith('/configure-default-labels').toString())
       - name: Acknowledge command comment
         if: steps.filter.outputs.isConfigureCommand == 'true'
         id: initial_ack
