infra(CI): Update run name of Require Closing Tag workflow #51

--- a/.github/workflows/require-closing-tag.yaml
+++ b/.github/workflows/require-closing-tag.yaml
@@ -1,5 +1,5 @@
 name: Require Closing Tag in PR Body
-run-name: "#${{ github.event.pull_request.number }}"
+run-name: "Checking Closing Tag on #${{ github.event.pull_request.number }}"
 on:
   pull_request:
     types: [ opened, edited, synchronize ]
