--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "@nestjs/platform-express": "^11.0.10"
   },
   "devDependencies": {
+    "@nestjs/cli": "^11.0.0",
     "@nestjs/testing": "^11.0.10",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.17",
     "@types/node": "^22.13.4",
-    "prettier": "^3.5.1",
-    "@nestjs/cli": "^11.0.0",
     "@types/supertest": "^6.0.2",
+    "aws-cdk-lib": "^2.179.0",
+    "prettier": "^3.5.1",
     "supertest": "^7.0.0",
     "unplugin-swc": "^1.5.1",
     "vitest": "^3.0.6"
