--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@swc/core": "^1.10.17",
     "@types/node": "^22.13.4",
     "@types/supertest": "^6.0.2",
+    "aws-cdk": "^2.1000.2",
     "aws-cdk-lib": "^2.179.0",
     "prettier": "^3.5.1",
     "supertest": "^7.0.0",
