--- a/package.json
+++ b/package.json
@@ -31,17 +31,18 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.10",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.10",
     "@nestjs/platform-express": "^11.0.10"
   },
   "devDependencies": {
+    "@nestjs/cli": "^11.0.0",
     "@nestjs/testing": "^11.0.10",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.17",
     "@types/node": "^22.13.4",
-    "prettier": "^3.5.1",
-    "@nestjs/cli": "^11.0.0",
     "@types/supertest": "^6.0.2",
+    "prettier": "^3.5.1",
     "supertest": "^7.0.0",
     "unplugin-swc": "^1.5.1",
     "vitest": "^3.0.6"
